--- a/index.html
+++ b/index.html
@@ -23,5 +23,24 @@
     <div class="slogan">
         <h2>Slogan Chido</h2>
     </div>
+    <div class="grupo-producto">
+        <hr size="50px" color="lightgray"> 
+        <div class="producto">
+            <img src="https://picsum.photos/600" alt="" class="img-producto">
+            <h3 class="titulo">Titulo</h3>
+            <p class="descripcion">Descripcion: Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis assumenda at quibusdam repellendus maxime nesciunt repellat ex voluptatibus ullam, doloremque quasi dolore odit harum ratione quia nulla? Fuga, quod dignissimos. y precio</p>
+        </div>
+        <div class="producto">
+            <img src="https://picsum.photos/600" alt="" class="img-producto">
+            <h3 class="titulo">Titulo</h3>
+            <p class="descripcion">Descripcion: Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis assumenda at quibusdam repellendus maxime nesciunt repellat ex voluptatibus ullam, doloremque quasi dolore odit harum ratione quia nulla? Fuga, quod dignissimos. y precio</p>
+        </div>
+        <div class="producto">
+            <img src="https://picsum.photos/600" alt="" class="img-producto">
+            <h3 class="titulo">Titulo</h3>
+            <p class="descripcion">Descripcion: Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis assumenda at quibusdam repellendus maxime nesciunt repellat ex voluptatibus ullam, doloremque quasi dolore odit harum ratione quia nulla? Fuga, quod dignissimos. y precio</p>
+        </div>
+    </div>
+    <div class=""></div>
 </body>
 </html>
