--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <h1>Merch para gente Cool</h1>
         <hr size="2px" color="white"> 
         <nav class="menu">
-            <a href="">HOME</a>
-            <a href="">Comprar</a>
+            <a href="index.html">HOME</a>
+            <a href="comprar.html">Comprar</a>
             <a href="">Quienes somos</a>
             <a href="">Coleccion</a>
             <a href="" class="login">Login</a>
@@ -27,20 +27,43 @@
         <hr size="50px" color="lightgray"> 
         <div class="producto">
             <img src="https://picsum.photos/600" alt="" class="img-producto">
-            <h3 class="titulo">Titulo</h3>
-            <p class="descripcion">Descripcion: Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis assumenda at quibusdam repellendus maxime nesciunt repellat ex voluptatibus ullam, doloremque quasi dolore odit harum ratione quia nulla? Fuga, quod dignissimos. y precio</p>
+            <h3 class="titulo-producto">Titulo</h3>
+            <p class="descripcion-producto">Descripcion: Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis assumenda at quibusdam repellendus maxime nesciunt repellat ex voluptatibus ullam, doloremque quasi dolore odit harum ratione quia nulla? Fuga, quod dignissimos. y precio</p>
         </div>
         <div class="producto">
             <img src="https://picsum.photos/600" alt="" class="img-producto">
-            <h3 class="titulo">Titulo</h3>
-            <p class="descripcion">Descripcion: Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis assumenda at quibusdam repellendus maxime nesciunt repellat ex voluptatibus ullam, doloremque quasi dolore odit harum ratione quia nulla? Fuga, quod dignissimos. y precio</p>
+            <h3 class="titulo-producto">Titulo</h3>
+            <p class="descripcion-producto">Descripcion: Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis assumenda at quibusdam repellendus maxime nesciunt repellat ex voluptatibus ullam, doloremque quasi dolore odit harum ratione quia nulla? Fuga, quod dignissimos. y precio</p>
         </div>
         <div class="producto">
             <img src="https://picsum.photos/600" alt="" class="img-producto">
-            <h3 class="titulo">Titulo</h3>
-            <p class="descripcion">Descripcion: Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis assumenda at quibusdam repellendus maxime nesciunt repellat ex voluptatibus ullam, doloremque quasi dolore odit harum ratione quia nulla? Fuga, quod dignissimos. y precio</p>
+            <h3 class="titulo-producto">Titulo</h3>
+            <p class="descripcion-producto">Descripcion: Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis assumenda at quibusdam repellendus maxime nesciunt repellat ex voluptatibus ullam, doloremque quasi dolore odit harum ratione quia nulla? Fuga, quod dignissimos. y precio</p>
         </div>
     </div>
-    <div class=""></div>
+    <div class="quienes-somos">
+        <div class="explicacion">
+            <div class="explicacion-interior">
+                <h4 class="quienes">¿Quienes somos?</h4>
+                <p class="centrado">Merch para gente cool nació de la idea de un grupo de individuos devotos a la moda, con el objetivo de ofrecer el mejor estilo a clientes en todo el mundo Nuestra tienda ofrece una amplia colección de artículos a precios accesibles, así como múltiples opciones de pago y envío. ¿Qué estás esperando? Comienza hoy mismo a realizar tus compras en línea para conocer más sobre lo que nos hace tan especiales.</p>
+            </div>
+            <div class="imagen">
+                <img src="" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="pie-pagina">
+        <div class="contacto">
+            <h5>Contactanos</h5>
+            <p class="centrado">Zona Universitaria, San Luis Potosi</p>
+            <p class="centrado">444-123-4567</p>
+        </div>
+        <div class="botones">
+	        <a target="_blank" class="shared fb" title="Facebook"><img class="img-redes" src="fb-button.png"></a>
+            	
+	        <a target="_blank" class="shared tt" title="Instagram"><img  class="img-redes"src="insta-button.png"></a>
+            
+        </div>
+    </div>
 </body>
 </html>
