--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Merch para gente Cool</title>
 </head>
 <body>
     <header>
@@ -24,7 +24,6 @@
         <h2>Slogan Chido</h2>
     </div>
     <div class="grupo-producto">
-        <hr size="50px" color="lightgray"> 
         <div class="producto">
             <img src="https://picsum.photos/600" alt="" class="img-producto">
             <h3 class="titulo-producto">Titulo</h3>
