Quienes Somos Listo

--- a/comprar.html
+++ b/comprar.html
@@ -14,8 +14,8 @@
         <nav class="menu">
             <a href="index.html">HOME</a>
             <a href="comprar.html">Comprar</a>
-            <a href="">Quienes somos</a>
-            <a href="">Coleccion</a>
+            <a href="quienes-somos.html">Quienes somos</a>
+            <a href="">Blog de Ventas</a>
             <a href="" class="login">Login</a>
             <a href="" class="carrito">Carrito de Compra</a>
         </nav>
