--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Merch para gente Cool</title>
+    <title>Quienes Somos</title>
 </head>
 <body>
     <header>
@@ -20,26 +20,6 @@
             <a href="" class="carrito">Carrito de Compra</a>
         </nav>
     </header>
-    <div class="slogan">
-        <h2>Slogan Chido</h2>
-    </div>
-    <div class="grupo-producto">
-        <div class="producto">
-            <img src="https://picsum.photos/600" alt="" class="img-producto">
-            <h3 class="titulo-producto">Titulo</h3>
-            <p class="descripcion-producto">Descripcion: Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis assumenda at quibusdam repellendus maxime nesciunt repellat ex voluptatibus ullam, doloremque quasi dolore odit harum ratione quia nulla? Fuga, quod dignissimos. y precio</p>
-        </div>
-        <div class="producto">
-            <img src="https://picsum.photos/600" alt="" class="img-producto">
-            <h3 class="titulo-producto">Titulo</h3>
-            <p class="descripcion-producto">Descripcion: Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis assumenda at quibusdam repellendus maxime nesciunt repellat ex voluptatibus ullam, doloremque quasi dolore odit harum ratione quia nulla? Fuga, quod dignissimos. y precio</p>
-        </div>
-        <div class="producto">
-            <img src="https://picsum.photos/600" alt="" class="img-producto">
-            <h3 class="titulo-producto">Titulo</h3>
-            <p class="descripcion-producto">Descripcion: Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis assumenda at quibusdam repellendus maxime nesciunt repellat ex voluptatibus ullam, doloremque quasi dolore odit harum ratione quia nulla? Fuga, quod dignissimos. y precio</p>
-        </div>
-    </div>
     <div class="quienes-somos">
         <div class="explicacion">
             <div class="explicacion-interior">
