--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Quienes Somos</title>
+    <title>Blog</title>
 </head>
 <body>
     <header>
@@ -20,16 +20,8 @@
             <a href="" class="carrito">Carrito de Compra</a>
         </nav>
     </header>
-    <div class="quienes-somos">
-        <div class="explicacion">
-            <div class="explicacion-interior">
-                <h4 class="quienes">¿Quienes somos?</h4>
-                <p class="centrado">Merch para gente cool nació de la idea de un grupo de individuos devotos a la moda, con el objetivo de ofrecer el mejor estilo a clientes en todo el mundo Nuestra tienda ofrece una amplia colección de artículos a precios accesibles, así como múltiples opciones de pago y envío. ¿Qué estás esperando? Comienza hoy mismo a realizar tus compras en línea para conocer más sobre lo que nos hace tan especiales.</p>
-            </div>
-            <div class="imagen">
-                <img src="" alt="">
-            </div>
-        </div>
+    <div class="publicaciones">
+        
     </div>
     <div class="pie-pagina">
         <div class="contacto">
