--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="index.html">HOME</a>
             <a href="comprar.html">Comprar</a>
             <a href="quienes-somos.html">Quienes somos</a>
-            <a href="">Blog de Ventas</a>
+            <a href="blog.html">Blog de Ventas</a>
             <a href="" class="login">Login</a>
             <a href="" class="carrito">Carrito de Compra</a>
         </nav>
