--- a/carrito.html
+++ b/carrito.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Blog</title>
+    <title>Carrito</title>
 </head>
 <body>
     <header>
@@ -20,23 +20,36 @@
             <a href="carrito.html" class="carrito">Carrito de Compra</a>
         </nav>
     </header>
-    <div class="publicaciones">
-        <div class="publicacion">
-            <img src="https://picsum.photos/600" alt="" class="img-producto">
-            <h3 class="titulo-publicacion">Producto</h3>
-            <p class="descripcion-publicacion">Descripcion de productyo vendido por el publico</p>
+
+    <div class="cuerpo">
+        <h2>Mi carrito</h2>
+        <hr size="2px" color="lightgray"> 
+        <div class="lista-productos">
+            <ol>
+                <li class="lista">
+                    <img src="https://picsum.photos/150" alt="" class="img-producto">
+                    <div class="producto-carrito">
+                        <h3 class="titulo-producto">Producto</h3>
+                        <p class="precio-individual">$$$$$</p>
+                         <p class="descripcion-pequeña">Descripcion pequeña</p>
+                    </div>
+                    <p class="precio-por-varios">$$$$$$xmucho</p>
+                </li>
+                
+            </ol>
         </div>
-        <div class="publicacion">
-            <img src="https://picsum.photos/600" alt="" class="img-producto">
-            <h3 class="titulo-publicacion">Producto</h3>
-            <p class="descripcion-publicacion">Descripcion de productyo vendido por el publico</p>
+        <hr size="2px" color="lightgray"> 
+        <div class="informacion-final">
+            <p>Subtotal : $$$$$</p>
+            <p>Lugar de entrega</p>
         </div>
-        <div class="publicacion">
-            <img src="https://picsum.photos/600" alt="" class="img-producto">
-            <h3 class="titulo-publicacion">Producto</h3>
-            <p class="descripcion-publicacion">Descripcion de productyo vendido por el publico</p>
+        <hr size="2px" color="lightgray">
+        <p class="total">Total : $$$$$</p>
+        <div class="boton-compra" >
+            <button class="botones-compra">Finalizar compra</button>
         </div>
     </div>
+
     <div class="pie-pagina">
         <div class="contacto">
             <h5>Contactanos</h5>
