--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -17,7 +17,7 @@
             <a href="quienes-somos.html">Quienes somos</a>
             <a href="blog.html">Blog de Ventas</a>
             <a href="" class="login">Login</a>
-            <a href="" class="carrito">Carrito de Compra</a>
+            <a href="carrito.html" class="carrito">Carrito de Compra</a>
         </nav>
     </header>
     <div class="quienes-somos">
