--- a/login.html
+++ b/login.html
@@ -9,6 +9,7 @@
 </head>
 <body class="login-pantalla">
     <form action="">
+        <button class="equis">X</button>
         <div class="contenedor">
           <label for="uname"><b>Usuario</b></label>
           <input type="text" placeholder="Usuario" name="uname" required>
