--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="comprar.html">Comprar</a>
             <a href="quienes-somos.html">Quienes somos</a>
             <a href="blog.html">Blog de Ventas</a>
-            <a href="" class="login">Login</a>
+            <a href="login.html" class="login">Login</a>
             <a href="carrito.html" class="carrito">Carrito de Compra</a>
         </nav>
     </header>
