--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="blog.html">Blog de Ventas</a>
             <a href="login.html" class="login">Login</a>
             <a href="carrito.html" class="carrito">Carrito de Compra</a>
+            <a href="perfil.html" class="perfil">Perfil</a>
         </nav>
     </header>
     <div class="slogan">
